Step_7/deamonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: logstash-daemonset
  labels:
    app: logging
spec:
  selector:
    matchLabels:
      app: logging
  template:
    metadata:
      labels:
        app: logging
    spec:
      containers:
      - name: logstash
        image: docker.elastic.co/logstash/logstash:8.10.2 
        resources:
          limits:
            cpu: "500m"
            memory: "300Mi"
          requests:
            cpu: "100m"
            memory: "150Mi"
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: logstashconfig
          mountPath: /usr/share/logstash/config
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
      - name: logstashconfig
        configMap:
          name: logstash-config
