Step_7/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-step7
spec:
  selector:
    matchLabels:
      app: web
  replicas: 2
  template:
    metadata:
      labels:
        environment: dev
        app: web
        region: EU
    spec:
      containers:
        - name: flask
          image: digitalocean/flask-helloworld
          ports:
            - containerPort: 5000
