Step_7/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-loadbalancer
spec:
  selector:
    app: web
    # app: web
    environment: dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
