Step_7/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ilmioingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: prova.web.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-loadbalancer
            port:
              number: 80
